# FEAM

./: CMakeLists.txt  Makefile  README.md
include/: file_manager.hpp
src/: file_manager.cpp  file_preview.cpp  files_list.cpp  handle_shell.cpp  help_widget.cpp  ncurses_setup.cpp  search_files.cpp  sort_functions.cpp
